# Bazel build file for the `snmalloc-rs` crate.
#
# Multiple `rust_library` variants are exposed, each corresponding to a
# meaningful Cargo feature combination.  Downstream Bazel consumers depend
# on whichever variant matches their feature requirements; there is no
# Bazel equivalent of `cargo --features` so the matrix is materialised as
# separate targets.
#
# Tests under `tests/` are sliced into two groups: profiling-gated tests
# build against `:snmalloc_rs_profiling`; the rest build against the
# default `:snmalloc_rs`.  Benches under `benches/` are not exposed (the
# Criterion harness pulls in dev-deps the Bazel target graph does not
# yet model).

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

_CRATE_ROOT = "src/lib.rs"

_CRATE_SRCS = glob(
    ["src/**/*.rs"],
    allow_empty = False,
)

# Default (no-profiling) build.
rust_library(
    name = "snmalloc_rs",
    srcs = _CRATE_SRCS,
    crate_root = _CRATE_ROOT,
    edition = "2021",
    deps = [
        "//snmalloc-rs/snmalloc-sys:snmalloc_sys",
    ],
)

# Profiling-enabled build (Cargo feature `profiling`).  Pulls flate2
# via the root MODULE.bazel `crate_universe` extension (dev-only scope
# -- downstream consumers register their own flate2).  Raw frame
# addresses are emitted as 16-hex-digit pointers; see
# `:snmalloc_rs_profiling_symbolicated` below for the variant that
# resolves them into function/file/line via `backtrace`.
rust_library(
    name = "snmalloc_rs_profiling",
    srcs = _CRATE_SRCS,
    crate_features = ["profiling"],
    crate_name = "snmalloc_rs",
    crate_root = _CRATE_ROOT,
    edition = "2021",
    deps = [
        "//snmalloc-rs/snmalloc-sys:snmalloc_sys_profiling",
        "@crates//:flate2",
    ],
)

# Profiling + symbolicate build (Cargo features `profiling`,
# `symbolicate`).  Same C archive as `:snmalloc_rs_profiling` (the
# symbolicator is purely Rust-side) but additionally pulls in
# `backtrace` so `HeapProfile::write_flamegraph` and
# `HeapProfile::write_pprof_gz` resolve raw frame addresses into
# function/file/line at dump time.
#
# Use this instead of `:snmalloc_rs_profiling` when:
#   * the downstream binary will serve pprof bodies to a UI that
#     cannot symbolicate externally (Grafana Pyroscope, Polar Signals,
#     internal dashboards, `go tool pprof -http=:8080 -`), OR
#   * operators are capturing one-off heap profiles by hand and would
#     otherwise have to `atos -o <bin> -l <load_base> <addr>` for
#     every frame.
#
# Cost: `backtrace` pulls `addr2line` + `gimli` + `object` transitively
# (~500 kB live set at startup, parses the binary's debug info on
# first use).  If the consumer binary already links those crates for
# any other reason (panic backtraces, tracing-error, etc.) the
# incremental cost is near zero.  See CU-86aj360ae for the gap analysis.
rust_library(
    name = "snmalloc_rs_profiling_symbolicated",
    srcs = _CRATE_SRCS,
    crate_features = [
        "profiling",
        "symbolicate",
    ],
    crate_name = "snmalloc_rs",
    crate_root = _CRATE_ROOT,
    edition = "2021",
    deps = [
        "//snmalloc-rs/snmalloc-sys:snmalloc_sys_profiling",
        "@crates//:backtrace",
        "@crates//:flate2",
    ],
)

# Profile-enabled build without the `profiling` Cargo feature (no flate2).
#
# Same Rust source as `:snmalloc_rs` but binds the `:snmalloc_sys_profiling`
# C archive (SNMALLOC_PROFILE=ON, so the `sn_rust_profile_*` extern decls
# resolve).  The Cargo `profiling` feature is intentionally NOT enabled —
# `snapshot()`, `write_flamegraph()`, and `init_profiling_from_env()` are
# unconditional in the wrapper crate.  `write_pprof_gz` is gated behind the
# Cargo feature and therefore not available on this variant.
#
# Why this exists: `:snmalloc_rs_profiling` depends on `@crates//:flate2`
# wired through this module's `crate_universe` extension with
# `dev_dependency = True`.  That scopes `@crates` to this fork's dev/CI
# loop; downstream Bazel consumers (capitalintent monorepo) cannot resolve
# `@crates//:flate2` and therefore cannot use `:snmalloc_rs_profiling`
# directly.  `:snmalloc_rs_profile_compat` lets them opt into the profile
# build without registering flate2.
rust_library(
    name = "snmalloc_rs_profile_compat",
    srcs = _CRATE_SRCS,
    aliases = {
        "//snmalloc-rs/snmalloc-sys:snmalloc_sys_profiling": "snmalloc_sys",
    },
    crate_name = "snmalloc_rs",
    crate_root = _CRATE_ROOT,
    edition = "2021",
    deps = [
        "//snmalloc-rs/snmalloc-sys:snmalloc_sys_profiling",
    ],
)

# ---------------------------------------------------------------------------
# Tests.  Sliced by whether they require the `profiling` feature.
# ---------------------------------------------------------------------------

# memory_stats only depends on `sn_rust_statistics` -- no profiling
# required.
rust_test(
    name = "memory_stats_test",
    srcs = ["tests/memory_stats.rs"],
    edition = "2021",
    deps = [":snmalloc_rs"],
)

# Profiling-feature integration tests.  All link against
# :snmalloc_rs_profiling so the `cfg(feature = "profiling")` blocks
# are live and the C archive carries `SNMALLOC_PROFILE=ON`.
#
# Excluded by design:
#   * profile_viewer_roundtrip.rs / profile_pprof_roundtrip.rs --
#                                   depend on dev-deps (`inferno`) or
#                                   external host tooling (`go tool
#                                   pprof`); kept in the Cargo bench
#                                   harness only.
#
# `profile_symbolize.rs` is wired separately below against
# `:snmalloc_rs_profiling_symbolicated` (it carries
# `#![cfg(feature = "symbolicate")]`).
[
    rust_test(
        name = "{}_test".format(name),
        srcs = ["tests/{}.rs".format(name)],
        crate_features = ["profiling"],
        edition = "2021",
        deps = [
            ":snmalloc_rs_profiling",
            "//snmalloc-rs/snmalloc-sys:snmalloc_sys_profiling",
            "@crates//:flate2",
        ],
    )
    for name in [
        "profile_snapshot",
        "profile_streaming",
        "profile_lifetime_histogram",
        "profile_accuracy",
        "profile_pprof",
        "profile_pprof_gz",
        "profile_realloc",
        "profile_runtime_config",
    ]
]

# Symbolicate-feature integration test.  Compiled against the
# `:snmalloc_rs_profiling_symbolicated` variant so the
# `#![cfg(feature = "symbolicate")]` body is live and the symbolicator
# (`backtrace`) is in the link.  CU-86aj360ae.
rust_test(
    name = "profile_symbolize_test",
    srcs = ["tests/profile_symbolize.rs"],
    crate_features = [
        "profiling",
        "symbolicate",
    ],
    edition = "2021",
    deps = [
        ":snmalloc_rs_profiling_symbolicated",
        "//snmalloc-rs/snmalloc-sys:snmalloc_sys_profiling",
        "@crates//:backtrace",
        "@crates//:flate2",
    ],
)
