[package]
name = "snmalloc-sys"
version = "0.2.24"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"
license = "MIT"
description = "rust raw bindings of snmalloc."
keywords = ["snmalloc", "allocator"]
categories = ["memory-management", "api-bindings"]
homepage = "https://github.com/microsoft/snmalloc"
repository = "https://github.com/SchrodingerZhu/snmalloc-rs"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"

[dependencies.libc]
version = "0.2"
default-features = false

[features]
default = ["1mib"]
1mib = []
16mib = []
qemu = []
stats = []
debug = []
cache-friendly = []
android-lld = []
android-shared-stl = []
native-cpu = []
