[package]
name = "snmalloc-sys"
version = "0.2.26"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"
license = "MIT"
description = "rust raw bindings of snmalloc."
keywords = ["snmalloc", "allocator"]
categories = ["memory-management", "api-bindings"]
homepage = "https://github.com/microsoft/snmalloc"
repository = "https://github.com/SchrodingerZhu/snmalloc-rs"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = {version = "1.0",optional=true}
cmake = {version = "0.1",optional=true}

[features]
default = ["1mib","build_cmake"]
build_cc = ["cc"]
build_cmake = ["cmake"]
1mib = []
16mib = []
qemu = []
stats = []
debug = []
cache-friendly = []
android-lld = []
android-shared-stl = []
native-cpu = []
local_dynamic_tls = []
win8compat = []
usecxx20 = []