[package]
name = "snmalloc-sys"
version = "0.3.5"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2021"
license = "MIT"
description = "rust raw bindings of snmalloc."
keywords = ["snmalloc", "allocator"]
categories = ["memory-management", "api-bindings"]
homepage = "https://github.com/microsoft/snmalloc"
repository = "https://github.com/SchrodingerZhu/snmalloc-rs"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = {version = "1.0",optional=true}
cmake = {version = "0.1",optional=true}

[features]
default = ["build_cmake"]
build_cc = ["cc"]
build_cmake = ["cmake"]
qemu = []
debug = []
android-lld = []
native-cpu = []
local_dynamic_tls = []
win8compat = []
usecxx17 = []
check = []
lto = []
notls = []
