[package]
name = "snmalloc-tools"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI for joining perf PMU output with snmalloc allocation-site metadata."
repository = "https://github.com/microsoft/snmalloc"
readme = "README.md"
publish = false

[lib]
name = "snmalloc_tools"
path = "src/lib.rs"

[[bin]]
name = "snmalloc-tools"
path = "src/main.rs"

[dependencies]
# clap with derive for ergonomic subcommand parsing.  We pin to a recent
# 4.x release; the derive feature pulls in the proc-macro crate.
clap = { version = "4", features = ["derive"] }
# Serde for JSON sidecar parsing (branch_hints.json from Phase 10.2) and
# for the --json structured-output flag.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Standard error type for CLI ergonomics.  Keeps each subcommand entry
# point's signature small without forcing every parser to define its
# own error enum.
anyhow = "1"
# snmalloc-rs is depended on with the `profiling` feature so the
# alloc-site lookup (Phase 10.1) is available.  The dependency is a
# path dep so this crate tracks the in-tree version of snmalloc-rs
# (not the published crates.io copy).
snmalloc-rs = { path = "../snmalloc-rs", features = ["profiling"] }
