[package]
name = "snmalloc-sys"
version = "0.7.4"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2021"
license = "MIT"
description = "rust raw bindings of snmalloc."
keywords = ["snmalloc", "allocator"]
categories = ["memory-management", "api-bindings"]
homepage = "https://github.com/microsoft/snmalloc"
repository = "https://github.com/microsoft/snmalloc"
build = "build.rs"
include = [
    "Cargo.toml",
    "build.rs",
    "src/**",
    "upstream/CMakeLists.txt",
    "upstream/src/**",
    "upstream/fuzzing/**",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", optional = true }
cmake = { version = "0.1", optional = true }

[features]
default = ["build_cmake", "usewait-on-address"]
build_cc = ["cc"]
build_cmake = ["cmake"]
qemu = []
debug = []
android-lld = []
native-cpu = []
local_dynamic_tls = []
win8compat = []
usecxx17 = []
check = []
lto = []
notls = []
stats = []
usewait-on-address = []
libc-api = []
tracing = []
fuzzing = []
vendored-stl = []
check-loads = []
pageid = []
gwp-asan = []
profiling = []

# Fat LTO + a single codegen unit.  This crate publishes the `.rlib`
# that links the C++ snmalloc thunks into the consumer; LTO settings
# must be present here as well as in `snmalloc-rs/Cargo.toml` for
# rustc's cross-crate LTO pass to actually inline through the
# `extern "C"` FFI surface.  See `docs/heap-profiling-benchmarks.md`
# ("LTO" subsection) for the bench delta.  Ticket: ClickUp 86aj0jfz1.
[profile.release]
lto = "fat"
codegen-units = 1

[profile.bench]
lto = "fat"
codegen-units = 1
